/feat [master] add delete command
