# internal/cmd/server.go
@@ -11,12 +11,22 @@ import (
 	"github.com/SimonMorphy/go-design-pattern/internal/user/app/query"
 	domain "github.com/SimonMorphy/go-design-pattern/internal/user/domain/user"
 	"github.com/labstack/echo/v4"
+	"github.com/sirupsen/logrus"
 	"net/http"
 )
 
 type HttpServer struct {
 	App app.Application
 	common.BaseResponse
+}
+
+func (h HttpServer) DeleteUser(ctx echo.Context, id users.UserId) error {
+	handle, err := h.App.Command.Delete.Handle(ctx.Request().Context(), command.DeleteUser(id))
+	if err != nil {
+		logrus.Error(errors.NewWithError(errors.ErrnoInternalServerError, err))
+		return h.BaseResponse.Error(ctx, err)
+	}
+	return h.BaseResponse.Success(ctx, handle.(uint))
 }
 
 func NewHttpServer(app app.Application, baseResponse common.BaseResponse) *HttpServer {
@@ -29,11 +39,9 @@ func (h HttpServer) ListUsers(ctx echo.Context, params users.ListUsersParams) er
 		Limit:  *params.Limit,
 	})
 	if err != nil {
-		h.BaseResponse.Error(ctx, err)
-		return err
+		return h.BaseResponse.Error(ctx, err)
 	}
-	h.BaseResponse.Success(ctx, userList)
-	return nil
+	return h.BaseResponse.Success(ctx, userList)
 }
 
 func (h HttpServer) CreateUser(ctx echo.Context) error {
@@ -46,8 +54,7 @@ func (h HttpServer) CreateUser(ctx echo.Context) error {
 		Usr: &user,
 	})
 	if err != nil {
-		h.BaseResponse.Error(ctx, err)
-		return err
+		return h.BaseResponse.Error(ctx, err)
 	}
 	return ctx.JSON(http.StatusCreated, handle)
 }
@@ -55,29 +62,25 @@ func (h HttpServer) CreateUser(ctx echo.Context) error {
 func (h HttpServer) GetUserById(ctx echo.Context, id users.UserId) error {
 	handle, err := h.App.Queries.Get.Handle(ctx.Request().Context(), query.GetUser{ID: uint(id)})
 	if err != nil {
-		h.BaseResponse.Error(ctx, err)
-		return err
+		return h.BaseResponse.Error(ctx, err)
 	}
-	return ctx.JSON(http.StatusOK, handle)
+	return h.BaseResponse.Success(ctx, handle)
 }
 
 func (h HttpServer) UpdateUser(ctx echo.Context, id users.UserId) error {
 	var user dto.Usr
 	err := ctx.Bind(&user)
 	if err != nil {
-		h.BaseResponse.Error(ctx, errors.NewWithError(errors.ErrnoBindRequestError, err))
-		return nil
+		return h.BaseResponse.Error(ctx, errors.NewWithError(errors.ErrnoBindRequestError, err))
 	}
 	err = user.Validate()
 	if err != nil {
-		h.BaseResponse.Error(ctx, errors.NewWithError(errors.ErrnoRequestValidateError, err))
-		return nil
+		return h.BaseResponse.Error(ctx, errors.NewWithError(errors.ErrnoRequestValidateError, err))
 	}
 	user.ID = uint(id)
 	_, err = h.App.Queries.Get.Handle(ctx.Request().Context(), query.GetUser{ID: uint(id)})
 	if err != nil {
-		h.BaseResponse.Error(ctx, errors.NewWithError(errors.ErrnoUserNotFoundError, err))
-		return nil
+		return h.BaseResponse.Error(ctx, errors.NewWithError(errors.ErrnoUserNotFoundError, err))
 	}
 	handle, err := h.App.Command.Update.Handle(ctx.Request().Context(), command.UpdateUser{
 		Usr: &user,
@@ -86,9 +89,7 @@ func (h HttpServer) UpdateUser(ctx echo.Context, id users.UserId) error {
 		},
 	})
 	if err != nil {
-		h.BaseResponse.Error(ctx, errors.NewWithError(errors.ErrnoUserModifyFailedError, err))
-		return nil
+		return h.BaseResponse.Error(ctx, errors.NewWithError(errors.ErrnoUserModifyFailedError, err))
 	}
-	h.BaseResponse.Success(ctx, handle)
-	return nil
+	return h.BaseResponse.Success(ctx, handle)
 }
